examples/generic/valid/02_simple_video.sdp
v=0
o=- 3720000001 1 IN IP4 127.0.0.1
s=Simple Video
t=0 0
m=video 5000 RTP/AVP 96
c=IN IP4 224.0.0.2/64
a=rtpmap:96 H264/90000
