examples/generic/invalid/02_wrong_order.sdp
v=0
o=- 1000 1 IN IP4 127.0.0.1
t=0 0
s=Session Name Appears Too Late
m=audio 5004 RTP/AVP 0
